fixed link to main page in anchor tag in scratch.html

--- a/scratch/scratch.html
+++ b/scratch/scratch.html
@@ -11,7 +11,7 @@
     <h1 id="section1">Pickleball</h1>
     
    <p class="text1">I thouroughly enjoy playing and watching pickleball. Here is a little page dedicated to some pickleball facts.</p>
-        <a class="button" href="/index.html">Back to the main page</a>
+        <a class="button" href="../index.html">Back to the main page</a>
     
     <section class="resume-section" id="pickleball info">
         <div class="resume-section-content">
